2001-09-18  Ryan Nunn <triforce@merlin.net.au>
	* exult.cc : Always do full speed palette cycling in 8 bit modes

2001-09-18  Ryan Nunn <triforce@merlin.net.au>
	* audio/Midi.cc, audio/Midi.h : Fixed some potential bugs and added
	  some extra methods to retreive the current playing track and if the
	  current track is repeating.
	* cheat_screen.cc : Added some usecode related info the actor display
	* exult.cc, gamewin.cc : Made it so the current playing song number is
	  saved and the song is restarted on restore.

2001-09-18  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc: Run_usecode() handles case where obj==0.
	Fixes end of monks' fight.

	* actors.cc: Set_polymorph() sets the frame to 'standing'.  This
	is a guess to make using the SI/SS amulet animation work right.

2001-09-17  Ryan Nunn <triforce@merlin.net.au>
	* objs/animate.cc : Fixed potential problem when saving

2001-09-17  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/*:  Set_item_frame_rot() added.

2001-09-16  Ryan Nunn <triforce@merlin.net.au>
	* audio/xmidi.cc : Fixed compiling errors.
	* bggame.cc : Change the butterfly sequence to use 32 bit ints for
	  timing calcs.
	* cheat.cc : Made create object cheat use Game_window::create_ireg_obj
	  instead of new Ireg_game_object.
	* game.cc, game.h, combat.cc, exult.cc, gamewin.cc, effects.cc,
	  npcnear.cc, npctime.cc, objs/barge.cc, objs/egg.cc,
	  usecode/intrinsics.cc, usecode/ucsched.cc :
	  Added Game::get_ticks() method to get the ticks at the start of this
	  iteration of the main game loop. The idea is to improve general game
	  syncronization. If possible Game::get_ticks() should be used instead
	  of SDL_GetTicks().	  
	* gamewin.cc, objs/animate.cc, objs/animate.h : Rewrote much of the
	  Frame_animator to ensure that animated shapes always remain
	  syncronized. Added new Animated_ifix_object. Fixed LOTS of broken SI
	  animations. Fixed BG 'gear' animation. New game required for some
	  changes to take effect.