@@ -131,4 +131,6 @@ void Ireg_game_object::write_ireg
 
 	buf[7] = (get_flag(Obj_flags::is_temporary) != 0);
 	out.write((char*)buf, sizeof(buf));
+					// Write scheduled usecode.
+	Game_window::write_scheduled(out, this);	
 	}
