@@ -1,3 +1,12 @@
+2001-09-19  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* gamewin.cc:  Save/restore Usecode scripts.
+	* actorio.cc (Actor): Nastiness:  Taking over iflag1 to indicate
+	saving of scheduled usecode.
+	* gumps/Newfile_gump.cc (Newfile_gump): Pause/resume tqueue.
+	* usecode/ucsched.cc: Save()/restore() work.
+	* tqueue.h (public): find_delay() returns time when due.
+
 2001-09-18  Ryan Nunn <triforce@merlin.net.au>
 	* exult.cc : Always do full speed palette cycling in 8 bit modes
 
